1. Added about page 2. Added contact page 3. Added about page 4. Added new js and css

--- a/people-coach.html
+++ b/people-coach.html
@@ -44,20 +44,20 @@
         </div>
         <div class="people-reponsive">
             <div id="people-column-2">
-                <div id="people-name-1">Lim Ewe Guan</div>
-                <img src="img/lim-ewe-guan.jpg" alt="lim-ewe-guan">
+                <div id="people-name-1">Wong Wai Onn</div>
+                <img src="img/wong-wai-onn.png" alt="wong-wai-onn">
             </div>
             <div id="people-column-3">
                 <div id="people-desc">
                     <ul>
                         <li>
-                            Main consultant teacher since the establishment of 24 Seasons Drum SMK Seri Kembangan.
+                            Coach of 24 Season Drum SMK Seri Kembangan.
                         </li>
                         <li>
-                            Lead us to perform outside the school.
+                            Alumni of 24 Seasons Drum SMK Seri Kembangan.
                         </li>
                         <li>
-                            Retired in 2020.
+                            Team 2 in Hands Percussion.
                         </li>
                     </ul>
                 </div>
