--- a/about-history.html
+++ b/about-history.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>24 Seasons Drum SMKSK-People</title>
-    <link rel="stylesheet" href="style/people.css">
+    <title>24 Seasons Drum SMKSK-About</title>
+    <link rel="stylesheet" href="style/about.css">
     <script src="javascript/home.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/-icon" href="img/24-logo-white.png">
@@ -34,33 +34,20 @@
                 <a href="home.html"><img src="img/24-logo-white.png" alt="24-logo"></a>
             </div>
             <div class="subnav">
-                <div class="subnav-title">PEOPLE</div>
+                <div class="subnav-title">ABOUT</div>
                 <div class="subnav-links">
-                    <a href="people-founder.html">Founder</a>
-                    <a href="people-consultant.html">Consultant</a>
-                    <a href="people-coach.html">Coach</a>
+                    <a href="about-history.html">History</a>
+                    <a href="#">Milestones</a>
                 </div>
             </div>
         </div>
-        <div class="people-reponsive">
-            <div id="people-column-2">
-                <div id="people-name-1">Lim Ewe Guan</div>
-                <img src="img/lim-ewe-guan.jpg" alt="lim-ewe-guan">
-            </div>
-            <div id="people-column-3">
-                <div id="people-desc">
-                    <ul>
-                        <li>
-                            Main consultant teacher since the establishment of 24 Seasons Drum SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Lead us to perform outside the school.
-                        </li>
-                        <li>
-                            Retired in 2020.
-                        </li>
-                    </ul>
-                </div>
+        <div id="about-column-2">
+            <div id="about-title-1">History</div>
+            <div id="about-desc">
+                <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr. Tay
+                    Keng Lee, and the consultant teacher is Mr. Lim Ewe Guan. We often give wonderful performances for
+                    the school in school festival celebrations, and have also traveled to China, Vietnam and Taiwan for
+                    drum art exchanges.</p>
             </div>
         </div>
     </div>
