--- a/home.html
+++ b/home.html
@@ -18,10 +18,10 @@
     <div class="topnav">
         <div class="navbar">
             <div><a href="people-founder.html">PEOPLE</a></div>
-            <div><a href="#">ABOUT</a></div>
+            <div><a href="about-history.html">ABOUT</a></div>
             <div><a href="#">EVENT</a></div>
             <div><a href="#">WHAT WE DO</a></div>
-            <div><a href="#">CONTACT</a></div>
+            <div><a href="contact.html">CONTACT</a></div>
         </div>
         <div class="sideBtn">
             <button class="openbtn" type="button" onclick="openNav()">☰</button>
@@ -29,11 +29,12 @@
     </div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="#">ABOUT</a></div>
+        <div><a href="about-history.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
-        <div><a href="#">CONTACT</a></div>
+        <div><a href="contact.html">CONTACT</a></div>
     </div>
 
     <div class="logo">
