--- a/people-founder.html
+++ b/people-founder.html
@@ -20,11 +20,12 @@
     </div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="#">ABOUT</a></div>
+        <div><a href="about-history.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
-        <div><a href="#">CONTACT</a></div>
+        <div><a href="contact.html">CONTACT</a></div>
     </div>
 
     <div class="people-container-1">
@@ -37,17 +38,29 @@
                 <div class="subnav-links">
                     <a href="people-founder.html">Founder</a>
                     <a href="people-consultant.html">Consultant</a>
-                    <a href="#">abc</a>
+                    <a href="people-coach.html">Coach</a>
                 </div>
             </div>
         </div>
-        <div id="people-column-2">
-            <div id="people-name-1">Tay Keng Lee</div>
-            <img src="img/tay-keng-lee.jpeg" alt="tay-keng-lee">
-        </div>
-        <div id="people-column-3">
-            <div id="people-desc">
-                Tay Keng Lee is the founder of 24 Seasons Drum SMKSK.
+        <div class="people-reponsive">
+            <div id="people-column-2">
+                <div id="people-name-1">Tay Keng Lee</div>
+                <img src="img/tay-keng-lee.jpeg" alt="tay-keng-lee">
+            </div>
+            <div id="people-column-3">
+                <div id="people-desc">
+                    <ul>
+                        <li>
+                            Founder of 24 Seasons Drum SMK Seri Kembangan.
+                        </li>
+                        <li>
+                            Principal of SMK Seri Kembangan.
+                        </li>
+                        <li>
+                            Retired in 2019.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
