--- a/about-history.html
+++ b/about-history.html
@@ -22,14 +22,14 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="#">ABOUT</a></div>
+        <div><a href="about-history.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
-    <div class="people-container-1">
-        <div id="people-column-1">
+    <div class="about-container-1">
+        <div id="about-column-1">
             <div class="logo">
                 <a href="home.html"><img src="img/24-logo-white.png" alt="24-logo"></a>
             </div>
@@ -44,10 +44,25 @@
         <div id="about-column-2">
             <div id="about-title-1">History</div>
             <div id="about-desc">
-                <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr. Tay
-                    Keng Lee, and the consultant teacher is Mr. Lim Ewe Guan. We often give wonderful performances for
-                    the school in school festival celebrations, and have also traveled to China, Vietnam and Taiwan for
-                    drum art exchanges.</p>
+                <div>
+                    <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr.
+                        Tay
+                        Keng Lee, and the consultant teacher is Mr. Lim Ewe Guan. We often give wonderful performances
+                        for
+                        the school in school festival celebrations, and have also traveled to China, Vietnam and Taiwan
+                        for
+                        drum art exchanges.</p>
+                </div>
+                <div id="about-history-image">
+                    <div>
+                        <img src="img/24-taiwan-exchanges.jpg" alt="">
+                        <p>Exchange to Taiwan</p>
+                    </div>
+                    <div>
+                        <img src="img/24-sk.jpg" alt="">
+                        <p>Perfromance in school</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
