--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="#">ABOUT</a></div>
+        <div><a href="about-history.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
