1. added scroll to top button 2. adjusted several page

--- a/about-history.html
+++ b/about-history.html
@@ -28,6 +28,8 @@
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
+
     <div class="about-container-1">
         <div id="about-column-1">
             <div class="logo">
@@ -42,8 +44,9 @@
             </div>
         </div>
         <div id="about-column-2">
-            <div id="about-title-1">History</div>
+
             <div id="about-desc">
+                <div id="about-title-1">History</div>
                 <div>
                     <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr.
                         Tay
@@ -60,7 +63,7 @@
                     </div>
                     <div>
                         <img src="img/24-sk.jpg" alt="">
-                        <p>Perfromance in school</p>
+                        <p>Performance in school</p>
                     </div>
                 </div>
             </div>
