--- a/home.html
+++ b/home.html
@@ -16,13 +16,7 @@
 
 <body>
     <div class="topnav">
-        <div class="navbar">
-            <div><a href="people-founder.html">PEOPLE</a></div>
-            <div><a href="about-history.html">ABOUT</a></div>
-            <div><a href="#">EVENT</a></div>
-            <div><a href="#">WHAT WE DO</a></div>
-            <div><a href="contact.html">CONTACT</a></div>
-        </div>
+        <img class="school-logo" src="img/SMK-SERI-KEMBANGAN-1.png" alt="SMK Seri Kembangan">
         <div class="sideBtn">
             <button class="openbtn" type="button" onclick="openNav()">☰</button>
         </div>
@@ -36,16 +30,16 @@
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
-
     <div class="logo">
         <a href="home.html"><img src="img/24-logo-white.png" alt="24-logo"></a>
     </div>
-
     <div>
-        <div id="home-content">
-            <div id="home-content-1">We are&nbsp;</div>
-            <div id="home-content-2">DRUMMERS&nbsp;</div>
-            <div id="home-content-3">from SMK Seri Kembangan</div>
+        <div class="navbar">
+            <div><a href="people-founder.html">PEOPLE</a></div>
+            <div><a href="about-history.html">ABOUT</a></div>
+            <div><a href="#">EVENT</a></div>
+            <div><a href="#">WHAT WE DO</a></div>
+            <div><a href="contact.html">CONTACT</a></div>
         </div>
     </div>
 
