--- a/people-consultant.html
+++ b/people-consultant.html
@@ -28,6 +28,8 @@
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
+
     <div class="people-container-1">
         <div id="people-column-1">
             <div class="logo">
@@ -45,21 +47,25 @@
         <div class="people-reponsive">
             <div id="people-column-2">
                 <div id="people-name-1">Lim Ewe Guan</div>
+                <div id="sub-title">Consultant</div>
                 <img src="img/lim-ewe-guan.jpg" alt="lim-ewe-guan">
             </div>
             <div id="people-column-3">
                 <div id="people-desc">
-                    <ul>
-                        <li>
-                            Main consultant teacher since the establishment of 24 Seasons Drum SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Lead us to perform outside the school.
-                        </li>
-                        <li>
-                            Retired in 2020.
-                        </li>
-                    </ul>
+                    Mr. Lim Ewe Guan is a distinguished educator known for his instrumental role at SMK Seri Kembangan
+                    as a Consultant Teacher for the 24 Season Drum. With a wealth of experience, he also served as the
+                    Head of the English Department, contributing significantly to the school's academic excellence and
+                    cultural enrichment.
+                    <br><br>
+                    Under his guidance, the 24 Season Drum team flourished, attaining remarkable achievements and
+                    recognition both within and beyond the school's walls. Mr. Lim's visionary leadership extended
+                    beyond the classroom, as he actively led the team to mesmerizing performances at various external
+                    venues, fostering a wider appreciation for the art of drumming.
+                    <br><br>
+                    Mr. Lim's legacy is deeply intertwined with the school's growth and vibrancy, as he dedicated
+                    himself to nurturing both students' academic pursuits and their artistic talents. His tenure
+                    culminated in a well-deserved retirement in 2020, marking the end of an era characterized by his
+                    unwavering dedication, innovative approach, and profound impact on the school community.
                 </div>
             </div>
         </div>
