--- a/people-founder.html
+++ b/people-founder.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 
 <head>
     <title>24 Seasons Drum SMKSK-People</title>
@@ -28,6 +28,8 @@
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
+
     <div class="people-container-1">
         <div id="people-column-1">
             <div class="logo">
@@ -45,21 +47,24 @@
         <div class="people-reponsive">
             <div id="people-column-2">
                 <div id="people-name-1">Tay Keng Lee</div>
+                <div id="sub-title">Founder</div>
                 <img src="img/tay-keng-lee.jpeg" alt="tay-keng-lee">
             </div>
             <div id="people-column-3">
                 <div id="people-desc">
-                    <ul>
-                        <li>
-                            Founder of 24 Seasons Drum SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Principal of SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Retired in 2019.
-                        </li>
-                    </ul>
+                    Mr. Tay Keng Lee is a distinguished individual known for his significant contributions in the field
+                    of education and cultural enrichment. As the founder of 24 Seasons Drum at SMK Seri Kembangan, he
+                    played a pivotal role in introducing the art of drumming to the institution, fostering creativity,
+                    and promoting cultural understanding among students. Serving as the Principal of SMK Seri Kembangan,
+                    Mr. Tay's visionary leadership left an indelible mark on the school community, nurturing academic
+                    excellence and character development.
+                    <br>
+                    <br>
+                    Having dedicated years of his life to the betterment of education and cultural exchange, Mr. Tay
+                    Keng Lee retired in 2019, leaving behind a legacy of innovation and inspiration. His passion for
+                    both education and drumming has not only impacted the lives of countless students but has also
+                    enriched the cultural fabric of the institution. Through his tenure and leadership, Mr. Tay has left
+                    an enduring legacy that continues to resonate and shape the educational landscape.
                 </div>
             </div>
         </div>
