--- a/people-coach.html
+++ b/people-coach.html
@@ -28,6 +28,8 @@
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
+
     <div class="people-container-1">
         <div id="people-column-1">
             <div class="logo">
@@ -45,21 +47,25 @@
         <div class="people-reponsive">
             <div id="people-column-2">
                 <div id="people-name-1">Wong Wai Onn</div>
+                <div id="sub-title">Coach</div>
                 <img src="img/wong-wai-onn.png" alt="wong-wai-onn">
             </div>
             <div id="people-column-3">
                 <div id="people-desc">
-                    <ul>
-                        <li>
-                            Coach of 24 Season Drum SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Alumni of 24 Seasons Drum SMK Seri Kembangan.
-                        </li>
-                        <li>
-                            Team 2 in Hands Percussion.
-                        </li>
-                    </ul>
+                    Mr. Wong Wai Onn is a notable figure deeply ingrained in the vibrant tapestry of 24 Season Drum SMK
+                    Seri Kembangan. As a Coach, he has played a pivotal role in nurturing and honing the drumming
+                    talents of the next generation. What sets Mr. Wong apart is his unique perspective as an alumnus of
+                    the same institution — a living testament to the transformative power of education and dedication.
+                    <br><br>
+                    An integral part of the Hands Percussion team, Mr. Wong's expertise and passion have contributed
+                    significantly to the ensemble's success. His rich experience and firsthand knowledge of the group
+                    dynamics have undoubtedly shaped the team's journey, fostering camaraderie, excellence, and a shared
+                    love for percussion.
+                    <br><br>
+                    Mr. Wong Wai Onn's journey from a student of 24 Seasons Drum SMK Seri Kembangan to becoming a
+                    guiding force as a Coach showcases his unwavering commitment to the art form and the school's
+                    legacy. His story embodies the spirit of continuity, inspiration, and a strong sense of belonging
+                    that resonates within the drumming community.
                 </div>
             </div>
         </div>
