1. Added several new page

--- a/about-introduction.html
+++ b/about-introduction.html
@@ -46,26 +46,27 @@
         <div id="about-column-2">
 
             <div id="about-desc">
-                <div id="about-title-1">History</div>
+                <div id="about-title-1">Introduction</div>
                 <div>
-                    <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr.
-                        Tay
-                        Keng Lee, and the consultant teacher is Mr. Lim Ewe Guan. We often give wonderful performances
-                        for
-                        the school in school festival celebrations, and have also traveled to China, Vietnam and Taiwan
-                        for
-                        drum art exchanges.</p>
+                    <p>The 24 Seasons Drum is a drum performance that combines the 24 solar terms, calligraphy, and the
+                        Guangdong lion dance drum. It was co-founded in 1988 by Malaysian Chinese Chen Hui Chong and
+                        Chen Zai Fan, and in 2009, it became a national heritage project in Malaysia. The 24 Seasons
+                        Drum is an enriched and innovative form of traditional Chinese drumming art. It not only serves
+                        as a drum performance but also symbolizes the cultural heritage of the Southeast Asian Chinese
+                        community.
+                    </p>
+                    <p>
+                        The performance form of the 24 Seasons Drums uses 24 single-skin large drums to represent the 24
+                        solar terms, which are: Beginning of Spring, Rain Water, Waking of Insects, Spring Equinox, Pure
+                        Brightness, Grain Rain, Beginning of Summer, Lesser Fullness of Grain, Grain in Ear, Summer
+                        Solstice, Lesser Heat, Greater Heat, Beginning of Autumn, End of Heat, White Dew, Autumn
+                        Equinox, Cold Dew, Frost's Descent, Beginning of Winter, Lesser Snow, Greater Snow, Winter
+                        Solstice, Lesser Cold, and Greater Cold. Performers create different drum rhythms for each
+                        seasonal drum, combined with shouts, body movements, and changes in formations, forming a
+                        large-scale drum ensemble performance.
+                    </p>
                 </div>
-                <div id="about-history-image">
-                    <div>
-                        <img src="img/24-taiwan-exchanges.jpg" alt="">
-                        <p>Exchange to Taiwan</p>
-                    </div>
-                    <div>
-                        <img src="img/24-sk.jpg" alt="">
-                        <p>Performance in school</p>
-                    </div>
-                </div>
+                <img src="img/solarterms.jpg" alt="24-solar-terms">
             </div>
         </div>
     </div>
