--- a/home.html
+++ b/home.html
@@ -25,18 +25,18 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="about-history.html">ABOUT</a></div>
+        <div><a href="about-introduction.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
     <div class="logo">
-        <a href="home.html"><img src="img/24-logo-white.png" alt="24-logo"></a>
+        <a href="#"><img src="img/24-logo-white.png" alt="24-logo"></a>
     </div>
     <div>
         <div class="navbar">
             <div><a href="people-founder.html">PEOPLE</a></div>
-            <div><a href="about-history.html">ABOUT</a></div>
+            <div><a href="about-introduction.html">ABOUT</a></div>
             <div><a href="#">EVENT</a></div>
             <div><a href="#">WHAT WE DO</a></div>
             <div><a href="contact.html">CONTACT</a></div>
