--- a/people-founder.html
+++ b/people-founder.html
@@ -22,7 +22,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div><a href="home.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
-        <div><a href="about-history.html">ABOUT</a></div>
+        <div><a href="about-introduction.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
