1. Added responsive for about-introduction

--- a/about-history.html
+++ b/about-history.html
@@ -46,7 +46,7 @@
         <div id="about-column-2">
 
             <div id="about-desc">
-                <div id="about-title-1">History</div>
+                <div id="about-title-1">Our History</div>
                 <div>
                     <p>24 Seasons Drum SMK Seri Kembangan was established on 11 December 2010, founded by Principal Mr.
                         Tay
