--- a/about-introduction.html
+++ b/about-introduction.html
@@ -46,9 +46,10 @@
         <div id="about-column-2">
 
             <div id="about-desc">
-                <div id="about-title-1">Introduction</div>
+                <div id="about-title-1">24 Seasons Drum</div>
                 <div>
-                    <p>The 24 Seasons Drum is a drum performance that combines the 24 solar terms, calligraphy, and the
+                    <p>
+                        The 24 Seasons Drum is a drum performance that combines the 24 solar terms, calligraphy, and the
                         Guangdong lion dance drum. It was co-founded in 1988 by Malaysian Chinese Chen Hui Chong and
                         Chen Zai Fan, and in 2009, it became a national heritage project in Malaysia. The 24 Seasons
                         Drum is an enriched and innovative form of traditional Chinese drumming art. It not only serves
@@ -57,16 +58,16 @@
                     </p>
                     <p>
                         The performance form of the 24 Seasons Drums uses 24 single-skin large drums to represent the 24
-                        solar terms, which are: Beginning of Spring, Rain Water, Waking of Insects, Spring Equinox, Pure
-                        Brightness, Grain Rain, Beginning of Summer, Lesser Fullness of Grain, Grain in Ear, Summer
-                        Solstice, Lesser Heat, Greater Heat, Beginning of Autumn, End of Heat, White Dew, Autumn
-                        Equinox, Cold Dew, Frost's Descent, Beginning of Winter, Lesser Snow, Greater Snow, Winter
-                        Solstice, Lesser Cold, and Greater Cold. Performers create different drum rhythms for each
+                        solar terms, which are: Start of Spring, Rain Water, Awakening Insects, Spring Equinox, Pure
+                        Brightness, Grain Rain, Start of Summer, Grain Full, Grain in Ear, Summer
+                        Solstice, Slight Heat, Great Heat, Start of Autumn, Limit of Heat, White Dew, Autumn
+                        Equinox, Cold Dew, Frost's Descent, Start of Winter, Light Snow, Great Snow, Winter
+                        Solstice, Slight Cold, and Great Cold. Performers create different drum rhythms for each
                         seasonal drum, combined with shouts, body movements, and changes in formations, forming a
                         large-scale drum ensemble performance.
                     </p>
                 </div>
-                <img src="img/solarterms.jpg" alt="24-solar-terms">
+                <img class="solar-terms" src="img/solarterms.jpg" alt="24-solar-terms">
             </div>
         </div>
     </div>
