--- a/about-history.html
+++ b/about-history.html
@@ -43,11 +43,10 @@
                 </div>
             </div>
             <div>
-                <img src="img/About Element.jpg" alt="">
+                <img class="about-element" src="img/About Element.jpg" alt="">
             </div>
         </div>
         <div id="about-column-2">
-
             <div id="about-desc">
                 <div id="about-title-1">Our History</div>
                 <div>
