--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <title>24 Seasons Drum SMKSK-Contact</title>
     <link rel="stylesheet" href="style/contact.css">
+    <link rel="stylesheet" href="style/home.js">
     <script src="javascript/contact.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +34,8 @@
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
+    <!-- 
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a> -->
 
     <div class="contact-container-1">
         <div id="contact-column-1">
@@ -59,14 +62,14 @@
                 <div class="contact-info-links">
                     <div class="contact-links">
                         <a href="https://www.facebook.com/24SD.SMKSK" target="_blank">
-                            <img src="img/facebook-icon.png" alt="facebook-icon">SMKSK 24 Seasons Drum
+                            <img src="img/facebook-icon-black.png" alt="facebook-icon">SMKSK 24 Seasons Drum
                         </a>
                     </div>
                 </div>
                 <div class="contact-info-links">
                     <div class="contact-links">
                         <a href="https://www.instagram.com/24seasonsdrumsmksk/" target="_blank">
-                            <img src="img/instagram-icon.png" alt="instagram-icon">24seasonsdrumsmksk
+                            <img src="img/instagram-icon-black.png" alt="instagram-icon">24seasonsdrumsmksk
                         </a>
                     </div>
                 </div>
