--- a/about-achievements.html
+++ b/about-achievements.html
@@ -46,16 +46,16 @@
                 </div>
             </div>
             <div>
-                <img src="img/About Element.jpg" alt="">
+                <img class="about-element" src="img/About Element.jpg" alt="">
             </div>
         </div>
         <div id="about-column-2">
             <div id="about-title-1">Achievements</div>
-            <section class="py-5">
+            <section class="py-3">
                 <ul class="timeline">
                     <li class="timeline-item mb-5">
                         <h5 class="fw-bold timeline-title">Drum Exchanges to Taiwan</h5>
-                        <p class="text-muted mb-2 fw-bold">2017</p>
+                        <p class="text-muted mb-2 float-right fw-bold timeline-year">2017</p>
                         <ul class="custom-ul">
                             <li>Embarked on a drum art exchange program to Taiwan, promoting cultural interaction.</li>
                             <li>Collaborated with Feng Chia University to showcase the diversity and beauty of drum art.
@@ -66,7 +66,7 @@
                     <li class="timeline-item mb-5">
                         <h5 class="fw-bold timeline-title">
                             First Concert - Our Drum Story</h5>
-                        <p class="text-muted mb-2 fw-bold">2016</p>
+                        <p class="text-muted mb-2 float-right fw-bold timeline-year">2016</p>
                         <ul class="custom-ul">
                             <li>Successfully the planning and execution of the first concert - Our Drum Story.</li>
                             <li>Collaborated with multiples clubs in school like Wushu, orchestra.
@@ -77,7 +77,7 @@
                     <li class="timeline-item mb-5">
                         <h5 class="fw-bold timeline-title">
                             Drum Art Exchange to Vietnam</h5>
-                        <p class="text-muted mb-2 fw-bold">2013</p>
+                        <p class="text-muted mb-2 float-right fw-bold timeline-year">2013</p>
                         <ul class="custom-ul">
                             <li>Engaged in a cultural exchange initiative, promoting drum art in Vietnam.</li>
                         </ul>
@@ -85,7 +85,7 @@
 
                     <li class="timeline-item mb-5">
                         <h5 class="fw-bold timeline-title">Drum Art Exchange to Beijing</h5>
-                        <p class="text-muted mb-2 fw-bold">2011</p>
+                        <p class="text-muted mb-2 float-right fw-bold timeline-year">2011</p>
                         <ul class="custom-ul">
                             <li>
                                 Participated in a cultural exchange program representing drum art in Beijing.</li>
