--- a/about-introduction.html
+++ b/about-introduction.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div>
-                <img src="img/About Element.jpg" alt="">
+                <img class="about-element" src="img/About Element.jpg" alt="">
             </div>
         </div>
         <div id="about-column-2">
