--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kablammo&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&family=Ubuntu:wght@400;700&display=swap"
         rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -31,8 +31,27 @@
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
+
     <div class="logo">
         <a href="#"><img src="img/24-logo-white.png" alt="24-logo"></a>
+    </div>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2500">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100 slide-img" src="img/home-bg2.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 slide-img" src="img/people-bg2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 slide-img" src="img/about-bg2.png" alt="Third slide">
+            </div>
+        </div>
+    </div>
+
+    <div class="home-content">
+        <p>ONCE A DRUMMER, ALWAYS A DRUMMER</p>
     </div>
 
     <div class="section">
@@ -48,12 +67,20 @@
                 </a>
             </div>
         </div>
-        <img class="school-logo" src="img/SMK-SERI-KEMBANGAN-1.png" alt="SMK Seri Kembangan">
+        <div>
+            <img class="school-logo" src="img/SMK-SERI-KEMBANGAN-1.png" alt="SMK Seri Kembangan">
+        </div>
     </div>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
