--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
         <div><a href="#">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
-    <!-- 
-    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a> -->
+
+    <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
 
     <div class="contact-container-1">
         <div id="contact-column-1">
