done what-we-do and some adjustment

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div><a href="people-founder.html">PEOPLE</a></div>
         <div><a href="about-introduction.html">ABOUT</a></div>
         <div><a href="#">EVENT</a></div>
-        <div><a href="#">WHAT WE DO</a></div>
+        <div><a href="whatwedo-festival.html">WHAT WE DO</a></div>
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
