--- a/whatwedo-festival.html
+++ b/whatwedo-festival.html
@@ -22,11 +22,11 @@
     <div>
         <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
         <div class="sideBtn">
-            <button class="openbtn" type="button" onclick="openNav()">☰</button>
+            <button class="openbtn" type="button" onclick="openNav()">&#9776;</button>
         </div>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <div><a href="home.html">HOME</a></div>
+            <div><a href="index.html">HOME</a></div>
             <div><a href="people-founder.html">PEOPLE</a></div>
             <div><a href="about-introduction.html">ABOUT</a></div>
             <div><a href="event-upcoming.html">EVENT</a></div>
@@ -37,7 +37,7 @@
         <div class="festival-container-1">
             <div id="festival-column-1">
                 <div class="logo">
-                    <a href="home.html"><img src="img/24-logo-black.jpg" alt="24-logo"></a>
+                    <a href="index.html"><img src="img/24-logo-black.jpg" alt="24-logo"></a>
                 </div>
                 <div class="subnav">
                     <div class="subnav-title">WHAT WE DO</div>
