--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
 
 <body>
     <div class="sideBtn">
-        <button class="openbtn" type="button" onclick="openNav()">☰</button>
+        <button class="openbtn" type="button" onclick="openNav()">&#9776;</button>
     </div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div><a href="home.html">HOME</a></div>
+        <div><a href="index.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
         <div><a href="about-introduction.html">ABOUT</a></div>
         <div><a href="event-upcoming.html">EVENT</a></div>
@@ -40,7 +40,7 @@
     <div class="contact-container-1">
         <div id="contact-column-1">
             <div class="logo">
-                <a href="home.html"><img src="img/24-logo-black.jpg" alt="24-logo"></a>
+                <a href="index.html"><img src="img/24-logo-black.jpg" alt="24-logo"></a>
             </div>
             <div class="subnav">
                 <div class="subnav-title">Contact</div>
