--- a/event-pieces.html
+++ b/event-pieces.html
@@ -16,11 +16,11 @@
 
 <body>
     <div class="sideBtn">
-        <button class="openbtn" type="button" onclick="openNav()">☰</button>
+        <button class="openbtn" type="button" onclick="openNav()">&#9776;</button>
     </div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div><a href="home.html">HOME</a></div>
+        <div><a href="index.html">HOME</a></div>
         <div><a href="people-founder.html">PEOPLE</a></div>
         <div><a href="about-history.html">ABOUT</a></div>
         <div><a href="event-upcoming.html">EVENT</a></div>
@@ -31,7 +31,7 @@
     <div class="event-container-1">
         <div id="event-column-1">
             <div class="logo">
-                <a href="home.html"><img src="img/blackimg.jpg" alt="24-logo"></a>
+                <a href="index.html"><img src="img/blackimg.jpg" alt="24-logo"></a>
             </div>
             <div class="subnav">
                 <div class="subnav-title">ACTIVITIES</div>
