--- a/whatwedo-education.html
+++ b/whatwedo-education.html
@@ -22,11 +22,11 @@
     <div>
         <a onclick="scrollFunction()" id="scrollTopBtn" href="#top">&#94;</a>
         <div class="sideBtn">
-            <button class="openbtn" type="button" onclick="openNav()">☰</button>
+            <button class="openbtn" type="button" onclick="openNav()">&#9776;</button>
         </div>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <div><a href="home.html">HOME</a></div>
+            <div><a href="index.html">HOME</a></div>
             <div><a href="people-founder.html">PEOPLE</a></div>
             <div><a href="about-introduction.html">ABOUT</a></div>
             <div><a href="event-upcoming.html">EVENT</a></div>
