--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
         <div><a href="contact.html">CONTACT</a></div>
     </div>
 
-    <div class="logo">
-        <a href="#"><img src="img/24-logo-white.png" alt="24-logo"></a>
+    <div>
+        <div class="logo">
+            <a href="#"><img src="img/24-logo-white.png" alt="24-logo"></a>
+        </div>
+        <div class="home-content">
+            <p>ONCE A DRUMMER, ALWAYS A DRUMMER</p>
+        </div>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="2500">
+    <div id="carouselExampleSlidesOnly" class="carousel slide desktop-view" data-ride="carousel" data-interval="2500">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100 slide-img" src="img/home-bg2.jpg" alt="First slide">
@@ -50,8 +55,18 @@
         </div>
     </div>
 
-    <div class="home-content">
-        <p>ONCE A DRUMMER, ALWAYS A DRUMMER</p>
+    <div id="carouselExampleSlidesOnly1" class="carousel slide mobile-view" data-ride="carousel" data-interval="2500">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100 slide-img" src="img/home-bg-1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 slide-img" src="img/home-bg-2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 slide-img" src="img/home-bg-3.jpg" alt="Third slide">
+            </div>
+        </div>
     </div>
 
     <div class="section">
