--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide desktop-view" data-ride="carousel" data-interval="2500">
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide desktop-view" data-ride="carousel" data-interval="2500">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100 slide-img" src="img/home-bg2.jpg" alt="First slide">
@@ -51,6 +51,15 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100 slide-img" src="img/about-bg1.png" alt="Third slide">
+            </div>
+        </div>
+    </div> -->
+    <div id="carouselExampleSlidesOnly" class="carousel slide desktop-view" data-ride="carousel" data-interval="2500">
+        <div id="myCarousel" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active item one"></div>
+                <div class="carousel-item item two"></div>
+                <div class="carousel-item item three"></div>
             </div>
         </div>
     </div>
